@@ -4,6 +4,7 @@
     * Fix last post and pagination links
     * Fix tagging and tracking features
     * Fix topic closing and post and topic deletion
+    * Fix quoting and highlighting of mods and admins
 
 2010-05-05:
     * version 0.7.5
